fixes to overlaps, srp page functional

--- a/client/src/components/ReviewComponent/style.css
+++ b/client/src/components/ReviewComponent/style.css
@@ -72,7 +72,11 @@ border-right:1px solid #8E8E8E; */
 }
 
 .single-review-heading a {
-    color:#123047;
+    color: #123047;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 50%;
 }
 
 
